changed colliding package names in gpu-simd and simd modules